--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     });
 
     var typing = new Typed(".lin1", {
-      strings: ["Freelancer!", "Front end Developer", "Back end Developer", "Full Stack Developer"],
+      strings: ["Stunning Imagery!", "Front end Developer", "Back end Developer", "Full Stack Developer"],
       loop: true,
       typeSpeed: 100,
       backSpeed: 80,
