--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a class="navbar-brand" href="#Home"><img src="img/pot.png" class="img-fld" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon">☰</span>
+        <span class="navbar-toggler-icon "><span>☰</span></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -59,7 +59,7 @@
   <div class="container-fluid  overflow-hidden  bg1">
     <div class="row " id="Home">
       <div class="col d-flex mt-auto  mb-auto align-items-center " id="text">
-        <div class="text  lh-1 text-cont ">
+        <div class="lh-1 text-cont ">
           <p class="fs-5">Hello , my name is
           <p>
           <p class=" name10 ">Hamza Siddiqui
@@ -90,7 +90,7 @@
       </div>
       <div class="col-lg-8 col-md-12 col-sm-12 col-12 p-5 ">
         <h3 class="fw-bold ">I'm Hamza Siddiqui and I'm a <span class="lin1"></span> </h3>
-        <p class="pt-3 pb-3 fs-5" style="text-align: justify;">
+        <p class="pt-3 pb-3   p-l p-m p-s p-ss  " style="text-align: justify;">
 
           Presenting an accomplished full stack developer who effortlessly navigates between front-end and back-end
           realms, weaving together seamless digital experiences. With a fusion of functionality and aesthetics at their
@@ -117,7 +117,7 @@
           <div class="content">
             <i class="bi bi-brush-fill icon"></i>
             <h3 class="text-center text-light pt-2">Web Design</h3>
-            <p class="text-center fs-6 text-light" style="text-align: justify;">
+            <p class="text-center p-s p-ss text-light" style="text-align: justify;">
               Elevate your online presence with our captivating and responsive web designs that blend creativity with
               functionality.</p>
           </div>
@@ -126,7 +126,7 @@
           <div class="content">
             <i class="bi bi-code-slash icon"></i>
             <h3 class="text-center text-light pt-2">Web Development </h3>
-            <p class="text-center fs-6 text-light" style="text-align: justify;">Elevate your online presence with my
+            <p class="text-center  p-s p-ss text-light" style="text-align: justify;">Elevate your online presence with my
               expert web development services, creating captivating and functional websites tailored to your unique
               needs.</p>
           </div>
@@ -135,7 +135,7 @@
           <div class="content">
             <i class="bi bi-graph-up-arrow icon"></i>
             <h3 class="text-center text-light pt-2">App Design</h3>
-            <p class="text-center fs-6 text-light" style="text-align: justify;" id="Skills">Creating engaging app
+            <p class="text-center  p-s p-ss text-light" style="text-align: justify;" id="Skills">Creating engaging app
               designs that
               balance beauty and usability for outstanding user experiences.</p>
           </div>
@@ -153,7 +153,7 @@
     <div class="row mt-5">
       <div class="col-lg-6 col-md-12 col-sm-12 col-12 p-5 ">
         <h3 class="fw-bold "> My Creative Skills & Experiences </h3>
-        <p class="pt-3 pb-3 fs-5" style="text-align: justify;">
+        <p class="pt-3 pb-3 p-l p-m p-s p-ss" style="text-align: justify;">
           I bring a wealth of creative skills and diverse experiences to my role as a developer. With a strong
           foundation in coding and design, I seamlessly blend functionality with aesthetics to produce engaging digital
           solutions. My portfolio spans a range of projects, showcasing my ability to adapt and innovate across various
@@ -172,7 +172,7 @@
     <div class="text d-flex  justify-content-center mt-4 pt-5 align-items-center">
       <div class="mt-2 lh-1">
         <p class="name">My TEAMS</p>
-        <p class="lin5 text-center fw-bold">Who with Me</p>
+        <p class="lin5  text-center fw-bold">Who with Me</p>
       </div>
     </div>
     <div class="row mt-5">
@@ -183,7 +183,7 @@
               <img src="img/hamzateam.jpg" class="img-fluid" alt="">
             </div>
             <h3 class="text-center text-light pt-2">Hamza Siddiqui</h3>
-            <p class="text-center fs-6 text-light" style="text-align: justify;">
+            <p class="text-center  p-s p-ss text-light" style="text-align: justify;">
               Elevate your online presence with our captivating and responsive web.</p>
           </div>
         </div>
@@ -193,7 +193,7 @@
               <img src="img/Muhammad Ahmed.png" class="img-fluid" alt="">
             </div>
             <h3 class="text-center text-light pt-2">Muhammad Ahmed</h3>
-            <p class="text-center fs-6 text-light" style="text-align: justify;">Elevate your online presence with my SEO
+            <p class="text-center p-s p-ss text-light" style="text-align: justify;">Elevate your online presence with my SEO
               and blogger expert services.</p>
           </div>
         </div>
@@ -203,7 +203,7 @@
               <img src="img/affanteam.jpg" class="img-fluid" alt="">
             </div>
             <h3 class="text-center text-light pt-2">Affan Iqbal</h3>
-            <p class="text-center fs-6 text-light" style="text-align: justify;">Creating engaging app designs that
+            <p class="text-center  p-s p-ss text-light" style="text-align: justify;">Creating engaging app designs that
               balance beauty.</p>
           </div>
         </div>
@@ -225,7 +225,7 @@
 
       <div class="col-lg-6 col-md-12 col-sm-12 col-12 p-3 ">
         <h3 class="fw-bold "> Get in Touch </h3>
-        <p class="pt-3 pb-3 fs-5" style="text-align: justify;">
+        <p class="pt-3 pb-3 p-l p-m p-s p-ss" style="text-align: justify;">
           I bring a wealth of creative skills and diverse experiences to my role as a developer. With a strong
           foundation in coding and design, I seamlessly blend functionality with aesthetics to produce engaging digital
           solutions.
@@ -247,7 +247,7 @@
           <li >
             <div class="d-flex">
                 <i class="bi bi-envelope-at-fill icon1 pb-2" style="margin-top: -0.4rem;"></i>
-                <span class="ps-3" id="email-to-copy">Hamzasiddiui1317@gmail.com</span>
+                <span class="ps-3" id="email-to-copy">Hamzasiddiqui1317@gmail.com</span>
                  <!-- Copy button -->
                 <i class="bi bi-clipboard2-heart-fill ms-2" id="copy-button"></i>
                 
@@ -276,7 +276,7 @@
           <div class="col  mt-3"> <textarea class="form-control" name="Massage" rows="3" placeholder="Message me.."
               required></textarea></div>
           <div class="d-flex">
-            <button id="my-form-button" class="btn1 mt-3">Send Me.</button>
+            <button id="my-form-button" class="btn1 btn-m mt-3">Send Me.</button>
             <p id="my-form-status" class=" mt-auto text-success ms-2"></p>
           </div>
         </form>
